// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > Snapshots > matches default snapshot 1`] = `
<textarea
  class="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-base shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm textarea"
  data-testid="textarea"
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches disabled state snapshot 1`] = `
<textarea
  class="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-base shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm textarea"
  data-testid="textarea"
  disabled=""
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches error state snapshot 1`] = `
<div
  class="textarea-wrapper"
>
  <textarea
    class="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-base shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm textarea textarea--error"
    data-testid="textarea"
  >
    Test content
  </textarea>
  <div
    class="textarea-footer"
  >
    <span
      class="textarea-error"
    />
  </div>
</div>
`;

exports[`Textarea > Snapshots > matches loading state snapshot 1`] = `
<textarea
  class="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-base shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm textarea textarea--loading"
  data-testid="textarea"
  disabled=""
>
  Test content
</textarea>
`;

exports[`Textarea > Snapshots > matches required state snapshot 1`] = `
<textarea
  class="flex min-h-[60px] w-full rounded-md border border-input bg-transparent px-3 py-2 text-base shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm textarea"
  data-testid="textarea"
  required=""
>
  Test content
</textarea>
`;
